--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -19,6 +19,6 @@
 
 	<filter-mapping>
 		<filter-name>sitemesh</filter-name>
-		<url-pattern>*.do</url-pattern>
+		<url-pattern>*.jsp</url-pattern>
 	</filter-mapping>
 </web-app>
